# gpt-rust-experiment

./: Cargo.toml  index.html
src/: main.rs  main.rs.yew  main.working.rs.bck  openai_chat.rs  test.rs.bck
