[package]
name = "gpt4-ui"
description = "An UI for GPT4"
version = "0.1.0"
edition = "2021"
authors = ["Aingaran Elango <me@aingaran.dev>"]
publish = false

[profile.release]
# strip = true      # Automatically strip symbols from the binary.
# opt-level = "z"   # Optimize for size.
strip = "debuginfo" # Strip only debug information.
opt-level = 3       # Optimize for performance.
lto = true          # enable LLVM's Link Time Optimisations.
codegen-units = 1   # Decreses compile time, but improves optimisations.

[dependencies]
derivative = "2.2.0"
reqwest = { version = "^0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
eframe ={ version = "^0.21" }
tracing-subscriber = "0.3"
tokio = { version = "^1.27", features = ["full"] }
